--- a/src/index.njk
+++ b/src/index.njk
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col">
+    <div class="col col-sm-12 col-md-9 col-lg-9">
       <h1>A pirate's life is for me</h1>
         <p>Hempen halter mizzenmast deadlights gaff pillage starboard jack lee Blimey draught. Man-of-war piracy black jack sutler Yellow Jack keel provost overhaul execution dock rigging. Log quarterdeck dead men tell no tales red ensign gibbet grog blossom bilge Nelsons folly code of conduct gunwalls.</p>
     </div>
