--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -9,16 +9,14 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ relative_path }}pirate-ships.html">Pirate ships</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ relative_path }}index-example.html">Index example</a>
-        </li>
+        
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Library books
+            Blogs
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            {% for book in library.books %}
-            <li><a class="dropdown-item" href="{{ relative_path }}books/{{ book.slug}}.html">{{ book.title }}</a></li>
+            {% for blog in blog.blogs %}
+            <li><a class="dropdown-item" href="{{ relative_path }}blog/{{ blog.slug}}.html">{{ blog.headline }}</a></li>
             {% endfor %}
           </ul>
         </li>
