--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,9 @@
 {% extends '_templates/base.njk' %}
 
 {% block page_title %}Capt. McGillicutty's Ship's Log{% endblock %}
+
+{% block page_description %}The index page for the pirates blog entries.{% endblock %}
+
 {% block content %}
 <div class="container">
   <div class="row justify-content-center">
@@ -15,15 +18,12 @@
   {% for blog in blog.blogs %}
   <div class="row justify-content-center">
     <div class="col col-sm-12 col-md-9 col-lg-9">  
-      <h3> 
-        <a href="blog/{{ blog.slug }}.html"> {{ blog.headline }}</a> 
-      </h3>
-      <p> {{ blog.date }} </p>
+      <h3 class="blog title"><a href="blog/{{ blog.slug }}.html"> {{ blog.headline }} </a></h3>
+      <p class="blog date"> {{ blog.date }} </p>
       <hr>
     </div>
   </div>
   {% endfor %}
 </div>
-
 
 {% endblock %}
